--- a/addons/inter-c/config.cfg
+++ b/addons/inter-c/config.cfg
@@ -4,4 +4,4 @@ name="InterC"
 description=""
 author="Veclav Talica / quantumedbox"
 version="0.1"
-script="res://addons/inter-c/src/Plugin.gd"
+script="src/Plugin.gd"
